# tvshow-nav

./: .gitignore  Cargo.toml  LICENSE  README.md  app-web.py  app.py  data.db  init_db.py  package-lock.json  package.json  pubspec.yaml
.github/workflows/: publish.yml
lib/: main.dart
lib/app/: bootstrap.dart  tvshow_nav_app.dart
lib/components/: empty_state.dart  home_page.dart  link_card.dart  link_form.dart  manage_page.dart  uninitialized_view.dart
lib/controllers/: link_controller.dart  link_form_controller.dart  navigation_controller.dart
lib/data/: link_store.dart  sqlite_link_store.dart
lib/db/: db_helper.dart
lib/models/: link.dart
lib/view/: dialogs.dart  main_page.dart
src/: App.css  App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/ui/: main.slint
src/pages/: Home.tsx  Manage.tsx
src/services/: tauri-api.ts
templates/: admin.html  edit.html  index.html  manage.html
test/: widget_test.dart
ui/: main.slint
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
