[package]
name = "tvshow-nav"
version = "0.3.0"
description = "A native TV show navigation application built with Slint."
authors = ["GT610"]
edition = "2021"
build = "build.rs"

[dependencies]
slint = { version = "1.14", features = ["live-preview"] }
rusqlite = { version = "0.38", features = ["serde_json", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.54"

[build-dependencies]
slint-build = "1.14"

[profile.release]
opt-level = "s"
lto = true
