[package]
name = "tvshow-nav"
version = "0.2.0"
description = "A native TV show navigation application built with Slint."
authors = ["GT610"]
edition = "2021"

[dependencies]
slint = { version = "1.8", features = ["compat-1-0"] }
rusqlite = { version = "0.31", features = ["serde_json", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.54"

[build-dependencies]
slint-build = "1.8"

[profile.release]
opt-level = "s"  # Optimize for size
lto = true
